--- a/app/assets/styles/modules/_header.css
+++ b/app/assets/styles/modules/_header.css
@@ -95,6 +95,13 @@
             background-size: cover;
             background-repeat: no-repeat;
         }
+        &--portfolio{
+            height: 68vh;
+            background: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../../assets/images/portheaderbg.png);
+            background-position: top right;
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
     }
 
     &__text-br{
@@ -199,7 +206,7 @@
         transform: translateY(-11px);
     }
 
-    &__sub--menu {
+    &__sub--menu, &__portfolio--navs {
         position: absolute;
         bottom: 0;
         text-align: center;
@@ -216,26 +223,29 @@
 
         & li {
             list-style-type: none;
-            padding: 22px 17px;
+            padding: 0px 17px;
             
             &.active{
-                border-bottom: 6px solid #FB5A1E;
-                transition: all 0.6s ease-in;
                 
                 & a  {
+                    border-bottom: 5px solid #FB5A1E;
                     font-size: 24px;
                     font-weight: 300;
+                transition: all 0.3s ease-in;
+
                 }
             }
 
         & a{
+            display: block;
             color: white;
             font-family: Sofia Pro;
             font-style: normal;
             font-weight: 100;
             font-size: 18px;
             line-height: 20px;
-            height: 100%;
+            
+            padding: 22px 0px;
             &:hover {
                 color: #FB5A1E;;
             }
@@ -244,7 +254,11 @@
         }
         
     }
+   
 
+    }
+    &__portfolio--navs li {
+        padding: 0px 38px;
     }
 
    
