--- a/app/assets/styles/modules/_blog.css
+++ b/app/assets/styles/modules/_blog.css
@@ -15,6 +15,16 @@
     }
     &__column {
         padding-left: 60px;
+        position: relative;
+
+        &--bg {
+            position: absolute;
+            /* width:100%; */
+            top:20%;
+            right:0;
+
+            
+        }
 
         &--item {
             display: flex;
@@ -31,7 +41,7 @@
                 width: 100%;
                 
                 & p {
-                    line-height: 1.7;
+                    line-height: 1.5;
                 }
                 
                 
@@ -106,14 +116,15 @@
             font-family: Sofia Pro;
             font-style: italic;
             font-weight: 300;
-            font-size: 12px;
+            font-size: 10px;
             line-height: 40px;
             color: #504D4D;            
         }
     }
-    &__cta span {
+    &__cta {    
+        & span {
         display: block;
-        /* transform:translateY(-40px) */
+        transform:translateY(-30px);
         line-height: 25px;
         color: #504D4D;
         &:after {
@@ -123,6 +134,11 @@
             height:2px;
             background:#504D4D;
         }
+
+    }
+    &.xform span{
+        transform: translateY(0);
+    }
     }
     &__text {
         font-family: Sofia Pro;
