--- a/app/assets/styles/modules/_blog.css
+++ b/app/assets/styles/modules/_blog.css
@@ -1,6 +1,6 @@
 .blog {
     &__container {
-            padding-top: 100px;
+            padding-top: 130px;
             padding-bottom:40px;
         &>div {
             display: flex;
@@ -11,6 +11,7 @@
 
         & img {
             width: 100%;
+            padding-top:20px;
         }
     }
     &__column {
@@ -24,6 +25,9 @@
             right:0;
 
             
+        }
+        &--desc {
+            padding-left: 30px;
         }
 
         &--item {
@@ -42,6 +46,16 @@
                 
                 & p {
                     line-height: 1.5;
+                    font-size: 12px;
+
+                }
+                & h5 {
+                    color: #FB5A1E;
+                    font-family: Sofia Pro;
+                    font-style: normal;
+                    font-weight: 600;
+                    font-size: 18px;
+                    line-height: 27px;
                 }
                 
                 
@@ -50,7 +64,7 @@
         }
 
         & img{
-            width: 80%;
+            width: 100%;
         }
     }
     &__cards {
@@ -67,13 +81,33 @@
         & p {
             padding: 6px 0px;
         }
+        &--bg {
+            position: absolute;
+            left: 0;
+            top: -10%;
+            z-index: -1;
+            
+            
+        }
+    }
+    &__card > div {
+        padding: 20px 0px;
     }
     /* &__text p{
         padding: 6px 0px;
     } */
     &__desc {
+        position: relative;
+
         & p {
             padding: 10px 0px;
+        }
+        &>div {
+            position: absolute;
+            top: 50%;
+            z-index: -1;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
     }
     &__sub {
@@ -81,7 +115,7 @@
         font-family: Sofia Pro;
         font-style: normal;
         font-weight: 600;
-        font-size: 20px;
+        font-size: 26px;
         line-height: 20px;
         /* text-align: center;        */
         color: #504D4D;        
@@ -115,10 +149,11 @@
         &--italics{
             font-family: Sofia Pro;
             font-style: italic;
-            font-weight: 300;
+            /* font-weight: 300; */
             font-size: 10px;
             line-height: 40px;
-            color: #504D4D;            
+            color: #504D4D; 
+            padding-top:6px;           
         }
     }
     &__cta {    
@@ -127,6 +162,7 @@
         transform:translateY(-30px);
         line-height: 25px;
         color: #504D4D;
+        font-weight:bold;
         &:after {
             content: '';
             display:block;
@@ -146,7 +182,7 @@
         font-weight: 600;
         font-size: 24px;
         line-height: 35px;
-        color: #333333;   
+        color: #FB5A1E;   
         &--long {
             font-family: Sofia Pro;
             font-style: normal;
