--- a/app/assets/styles/modules/_blog.css
+++ b/app/assets/styles/modules/_blog.css
@@ -70,6 +70,7 @@
     &__cards {
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
         padding: 30px 0px 50px;
 
         & > div {
