--- a/app/assets/styles/modules/_blog-story.css
+++ b/app/assets/styles/modules/_blog-story.css
@@ -8,8 +8,9 @@
             font-style: normal;
             font-weight: 600;
             font-size: 40px;
-            line-height: 26px;
-            color: #FB5A1E;            
+            line-height: 32px;
+            color: #FB5A1E; 
+            margin: 0 0 12px;           
         }
     }
     & img {
@@ -40,6 +41,7 @@
         font-size: 30px;
         line-height: 64px;
         color: #FB5A1E; 
+        white-space: nowrap;
         
         &.blog__story--italics {
             font-style: italic;
@@ -57,6 +59,7 @@
         font-weight: 600;
         font-size: 20px;
         line-height: 40px;
+        /* white-space: nowrap; */
         /* color: #FB5A1E; */
     }
     
@@ -83,7 +86,7 @@
         align-items: center;
         justify-content: space-between;
         margin: 0 auto;
-        width: 50%;
+        width: 64%;
         padding-right: 20px;
         padding-bottom: 60px;
     
@@ -95,7 +98,8 @@
             font-size: 24px;
             /* line-height: 40px; */
             color: #000000;  
-            padding-left:20px;          
+            padding-left:20px;
+            white-space: nowrap;          
         }
 
         & a {
@@ -122,4 +126,70 @@
             border-radius: 3px;             
          }
     }
+}
+
+@media only screen and (max-width:900px){
+    .blog__story--socials span{
+        margin-right: 20px;
+        font-size: 20px;
+    }
+    .blog__story--socials a {
+        margin-right: 10px;
+    }
+    .blog__story--socials {
+        width: 70%;
+    }
+}
+
+@media only screen and (max-width:600px){
+    .blog__text--long{
+        line-height: 26px;
+    }
+    .blog__story h3, .blog__story h4 {
+        font-size: 24px;
+    }
+    .blog__story--container {
+        padding: 40px;
+    }
+    .blog__story--hero h1 {
+        font-size: 33px;
+    }
+    .blog__story p, .blog__story li {
+        font-size: 16px;
+        line-height: 33px;
+    }
+    .blog__story--socials a.facebook {
+        width: 19px;
+    }
+    .blog__story--socials a {
+        width: 46px;
+    }
+}
+@media only screen and (max-width:425px){
+    .blog__story h3, .blog__story h4 {
+        font-size: 20px;
+    }
+    .blog__story h5 {
+        font-size: 18px;
+        line-height: 30px;
+    }
+    .blog__story--hero h1 {
+        font-size: 26px;
+    }
+    .blog__story--socials a.facebook {
+        width: 120px;
+    }
+    .blog__story--socials a {
+        width: 250px;
+    }
+    .blog__story--socials img {
+        width: 70%;
+    }
+    
+}
+@media only screen and (max-width:350px){
+    .blog__story h3, .blog__story h4 {
+        font-size: 18px;
+    }
+
 }
