--- a/app/assets/styles/modules/_header.css
+++ b/app/assets/styles/modules/_header.css
@@ -2,6 +2,7 @@
 
     width: 100%;
     position: relative;
+    
 
     &__container{
         height: 100vh;
@@ -232,6 +233,7 @@
                     font-size: 24px;
                     font-weight: 300;
                 transition: all 0.3s ease-in;
+                white-space:nowrap;
 
                 }
             }
@@ -333,15 +335,15 @@
 }
 @media only screen and (max-width: 768px){
     .header__sub--menu li a {
-        font-size: 15px;
+        font-size: 14px;
     }
     .header__sub--menu li.active a {
-        font-size: 19px;
+        font-size: 17px;
     }
 }
 @media only screen and (max-width: 660px){
     .header__sub--menu li  {
-        padding: 14px 8px;
+        padding: 0px 8px;
     }
     .header__sub--menu li a {
         font-size: 12px;
@@ -349,15 +351,11 @@
     .header__sub--menu li.active a {
         font-size: 16px;
     }
-}
-@media only screen and (max-width: 512px){
-    .header__sub--menu li  {
-        padding: 14px 4px;
-    }
-    .header__sub--menu  li a {
-        font-size: 10px;
+    .header__sub--menu li a, .header__portfolio--navs li a{
+        padding: 16px 0px;
     }
 }
+
 @media only screen and (max-width:600px){
     .header__development {
     /* vertical-align: sub; */
@@ -367,6 +365,16 @@
         vertical-align: text-bottom;
     }
 }
+@media only screen and (max-width: 512px){
+    .header__sub--menu li  {
+        padding: 0px 6px;
+    }
+    .header__sub--menu  li a {
+        font-size: 10px;
+    }
+    
+    
+}
 @media only screen and (max-width: 425px){
     .header__title--sub{
         font-size: 1.8rem;
@@ -374,6 +382,14 @@
     .header__text {
         font-size: 1.1rem;
     }
+    .header__sub--menu li.active a{
+        font-size: 10px;
+    }
+    .header__sub--menu li a {
+        font-size: 8px;
+        line-height: 5px;
+    }
+    
 }
 @media only screen and (max-width: 375px){
     .header__text{
