--- a/app/assets/styles/modules/_portfolio.css
+++ b/app/assets/styles/modules/_portfolio.css
@@ -14,7 +14,7 @@
         font-weight: 900;
         font-size: 53px;
         line-height: 90px;
-        text-align: center;
+        text-align: left;
         
         color: #333333;  
         
@@ -175,6 +175,9 @@
                 color: #000000;                
             }
         }
+        &--flex-img {
+            width: 783px;
+        }
     }
     &__swiper--area {
         position: absolute;
@@ -182,7 +185,7 @@
         right: 0;
         background: #E83124;
         /* text-align: center; */
-        width: 43%;
+        width: calc(100% - 783px);
         padding: 20px 40px;
 
         &> div {
@@ -336,4 +339,76 @@ color: #FFFFFF;
 }
 .swiper-container-horizontal>.swiper-pagination-bullets, .swiper-pagination-custom, .swiper-pagination-fraction{
     display: none;
+}
+
+@media only screen and (max-width:1110px){
+    .portfolio__item--flex-img {
+        height: 666px;
+    }
+    .portfolio__swiper--area {
+        width:calc(100% - 666px)
+    }
+    .portfolio__item--flex-text {
+        padding:28px 26px 28px 70px;
+    }
+}
+@media only screen and (max-width:1005px){
+    .portfolio__container.web {
+        flex-direction: column;
+    }
+    .portfolio__item--flex-text {
+        padding:0px 0px 45px 70px;
+    }
+    .portfolio__item--flex-img {
+        width: 100%;
+        height: 100%;
+    }
+    .portfolio__swiper--area {
+        width: 40%;
+    }
+
+}
+@media only screen and (max-width:640px){
+    
+    .portfolio__item--flex-text {
+        padding:0px 0px 10px 70px;
+    }
+    .portfolio__swiper--area {
+        width: 50%;
+    }
+    
+}
+@media only screen and (max-width:512px){
+    
+    .portfolio__item--flex-text {
+        padding:0px 0px 10px 30px;
+    }
+    .portfolio__swiper--area {
+        width: 60%;
+        padding: 20px;
+    }
+    .portfolio__title {
+        font-size: 40px;
+        line-height: 70px;
+    }
+    
+}
+@media only screen and (max-width:425px){
+    
+    .swiper--prev {
+        right: 76px;
+    }
+    
+@media only screen and (max-width:365px){
+    
+    .swiper--prev {
+        right: 59px;
+    }
+    .swiper--next{
+        right: 18px;
+    }
+    .portfolio__dash {
+        margin: 0 4px;
+    }
+    
 }
