--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -38,5 +38,6 @@
 @import 'modules/_recognition.css';
 @import 'modules/_geek.css';
 @import 'modules/_blog-story.css';
+@import 'modules/_redirect.css';
 
 
