--- a/app/assets/styles/modules/_geek.css
+++ b/app/assets/styles/modules/_geek.css
@@ -24,6 +24,7 @@
         position: relative;
         & img {
             width: 100%;
+            height: 90%;
         }
         & img.geek__text--bg {
             width: 60%;
@@ -41,10 +42,10 @@
         position: relative;
         
         & > .geek__item:nth-child(odd) {
-            transform: translateY(-40%);
+            transform: translateY(-40%) !important;
         }
         & > .geek__item:first-child {
-            transform: translateY(0px);
+            transform: translateY(0px) !important;
         }
         & > .geek__item:last-child {
             width: 66%;
@@ -137,7 +138,7 @@
 
     }
     &__space {
-        width: 32%;
+        width: 100%;
         padding: 10px 0px;
 
         & img {
