--- a/app/assets/styles/modules/_header.css
+++ b/app/assets/styles/modules/_header.css
@@ -368,10 +368,10 @@
         padding: 0 22px;
     } 
     .header__sub--menu li a, .header__portfolio--navs li a {
-        font-size: 15px;
+        font-size: 11px;
     }
     .header__sub--menu li.active a, .header__portfolio--navs li.active a {
-        font-size: 20px;
+        font-size: 16px;
     }
 }
 @media only screen and (max-width: 512px){
@@ -400,10 +400,16 @@
         font-size: 8px;
         line-height: 5px;
     }
-    .header__sub--menu li a, .header__portfolio--navs li a {
+    .header__sub--menu li a {
+        font-size: 9px;
+    }
+     .header__portfolio--navs li a {
         font-size: 13px;
     }
-    .header__sub--menu li.active a, .header__portfolio--navs li.active a {
+    .header__sub--menu li.active a{
+        font-size: 14px;
+    }
+    .header__portfolio--navs li.active a {
         font-size: 17px;
     }
 }
@@ -424,7 +430,13 @@
     .header__portfolio--navs li {
         padding: 0 10px;
     }
-    .header__sub--menu li a, .header__portfolio--navs li a {
+    .header__sub--menu li a{
+        font-size: 8px;
+    }
+    .header__sub--menu li.active a{
+        font-size: 10px;
+    }
+     .header__portfolio--navs li a {
         font-size: 11px;
     }
 }
