--- a/app/assets/styles/modules/_recognition.css
+++ b/app/assets/styles/modules/_recognition.css
@@ -16,6 +16,14 @@
         padding: 26px;
         margin-bottom: 60px;
         height: 424px;
+        &:hover {
+            
+            animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+            transform: translate3d(0, 0, 0);
+            backface-visibility: hidden;
+            perspective: 1000px;
+              
+        }
     }
     &__logo {
         text-align: center;
@@ -76,6 +84,19 @@
     }
     
 }
+@keyframes shake {
+   
+    
+    
+  
+    30%, 50%, 70% {
+      transform: translate3d(0px, 0, 0);
+    }
+  
+    40%, 60% {
+      transform: translate3d(2px, 0, 0);
+    }
+  }
 @media only screen and (max-width: 1176px){
     .recognition__card{
         width: 45%;
