--- a/app/assets/styles/modules/_solutions.css
+++ b/app/assets/styles/modules/_solutions.css
@@ -114,7 +114,12 @@
             transform-origin: top;
         }
         &:hover {
-            animation: cardHover 1.2s forwards 0s ease-out;;
+            
+            animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+            transform: translate3d(0, 0, 0);
+            backface-visibility: hidden;
+            perspective: 1000px;
+              
         }
         
         & img {
@@ -185,21 +190,21 @@
     
     }
 }
+@keyframes shake {
+   
+    
+    
+  
+    30%, 50%, 70% {
+      transform: translate3d(0px, 0, 0);
+    }
+  
+    40%, 60% {
+      transform: translate3d(2px, 0, 0);
+    }
+  }
 
-@keyframes cardHover{
-    0%{
-        transform: scale(.7);
-        opacity: 0;
-        }
-    61%{
-        transform: scale(1.1);
-        opacity: 0.6;
-        }
-    100%{
-        transform: rotate(xx) scale(1);
-        opacity: 1;
-        }
-}
+
 
 
 
