--- a/app/assets/styles/modules/_who.css
+++ b/app/assets/styles/modules/_who.css
@@ -7,6 +7,7 @@
     
     &__dot {
         position: absolute;
+        width: 100%;
         left: 0;
         height: 60%;
         transform: translateY(-70px);
