--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -39,5 +39,7 @@
 @import 'modules/_geek.css';
 @import 'modules/_blog-story.css';
 @import 'modules/_redirect.css';
+@import 'modules/_header-case.css';
+@import 'modules/_client.css';
 
 
