--- a/app/assets/styles/modules/_header.css
+++ b/app/assets/styles/modules/_header.css
@@ -103,6 +103,20 @@
             background-size: cover;
             background-repeat: no-repeat;
         }
+        &--tworeport{
+            height: 90vh;
+            background: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../../assets/images/tworeporbg.png);
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
+        &--afiaanyi{
+            height: 90vh;
+            background: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../../assets/images/afiaanyibg.png);
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
     }
 
     &__text-br{
