--- a/app/assets/styles/modules/_portfolio_section.css
+++ b/app/assets/styles/modules/_portfolio_section.css
@@ -140,7 +140,7 @@
         & > div {
             display: flex;
             justify-content: center;
-            align-items: stretch;
+            align-items: center;
             background-size: cover;
             box-shadow: 0px 4px 70px rgba(0, 0, 0, 0.12);
             background-repeat: no-repeat;
@@ -171,6 +171,18 @@
         }
         &-mom {
             background:url(../../../assets/images/mombg.png);
+            background-size:cover ;
+        }
+        &-chazb {
+            background:url(../../../assets/images/chazbg.png);
+            background-size:cover ;
+        }
+        &-nerfund {
+            background:url(../../../assets/images/nerfundbg.png);
+            background-size:cover ;
+        }
+        &-petrol {
+            background:url(../../../assets/images/petrolbg.png);
             background-size:cover ;
         }
         &.fave{
@@ -305,13 +317,14 @@
         letter-spacing: 0.02em;
         color: #333333;
         padding-bottom: .7rem;
+        line-height: 94px;
 
         &--afiaanyi{
             color: #fff;
         }
         &--mom{
             color: white;
-            line-height: 45px;
+            /* line-height: 45px; */
         }
         &--miss{
             color: #fff;
@@ -347,7 +360,7 @@
         font-weight: 300;
         font-size: 1rem;
         color: #333333;
-        line-height: 30px;
+        line-height: 23px;
 
         &--afiaanyi, &--miss{
             color: #fff;
@@ -359,7 +372,7 @@
             font-family: Sofia Pro;
             font-style: normal;
             font-weight: 300;
-            font-size:20px;
+            font-size:16px;
             line-height: 35px;
             color: #FB5A1E; 
             padding-right:24px           
@@ -397,15 +410,23 @@
         &.mom {
             background: #20B900;
         }
+        &.chazb {
+            background: #fff;
+            color: #FFA969;
+        }
+        &.nerfund {
+            background: #6DB710;;
+            /* color: #FFA969; */
+        }
     }
 /* 
     &__afiaanyi{
         background: radial-gradient(63.79% 63.79% at 50.05% 17.73%, rgba(175, 29, 32, 0.9) 0%, rgba(145, 29, 30, 0.9) 100%), url(../../assets/images/ecommerce.jpg);
     } */
 
-    /* &__tworeport{
-        background: linear-gradient(0deg, rgba(87, 87, 87, 0.95), rgba(87, 87, 87, 0.95)), url(../../assets/images/research.png);    
-    } */
+    &__tworeport{
+        width: 42%;    
+    }
 
     &__ellipse{
         position: absolute;
